--- a/c9s-python-3.11/Dockerfile.cpu
+++ b/c9s-python-3.11/Dockerfile.cpu
@@ -30,7 +30,7 @@ WORKDIR /opt/app-root/src
 #####################
 FROM base AS rstudio
 
-ARG RSTUDIO_SOURCE_CODE=rstudio/c9s-python-3.11
+ARG RSTUDIO_SOURCE_CODE=.
 
 WORKDIR /opt/app-root/bin
 
