--- a/c9s-python-3.11/Dockerfile.cpu
+++ b/c9s-python-3.11/Dockerfile.cpu
@@ -109,11 +109,11 @@ RUN dnf install -y \
     && dnf clean all \
     && rm -rf /var/cache/yum
 
-COPY ${RSTUDIO_SOURCE_CODE}/rsession.conf /etc/rstudio/rsession.conf
+COPY rsession.conf /etc/rstudio/rsession.conf
 
 # Install R packages
 # https://cran.r-project.org/web/packages
-COPY ${RSTUDIO_SOURCE_CODE}/install_packages.R ./
+COPY install_packages.R ./
 RUN R -f ./install_packages.R && \
     rm ./install_packages.R
 
@@ -136,10 +136,10 @@ RUN yum -y module enable nginx:$NGINX_VERSION && \
     nginx -v 2>&1 | grep -qe "nginx/$NGINX_VERSION\." && echo "Found VERSION $NGINX_VERSION" && \
     yum -y clean all --enablerepo='*'
 
-COPY --chown=1001:0 ${RSTUDIO_SOURCE_CODE}/supervisord/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY --chown=1001:0 supervisord/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 # Copy extra files to the image.
-COPY --chown=1001:0 ${RSTUDIO_SOURCE_CODE}/nginx/root/ /
+COPY --chown=1001:0 nginx/root/ /
 
 # Changing ownership and user rights to support following use-cases:
 # 1) running container on OpenShift, whose default security model
@@ -170,19 +170,19 @@ RUN sed -i -f ${NGINX_APP_ROOT}/nginxconf.sed ${NGINX_CONF_PATH} && \
     rpm-file-permissions
 
 # Configure nginx
-COPY ${RSTUDIO_SOURCE_CODE}/nginx/serverconf/ /opt/app-root/etc/nginx.default.d/
-COPY ${RSTUDIO_SOURCE_CODE}/nginx/httpconf/ /opt/app-root/etc/nginx.d/
-COPY ${RSTUDIO_SOURCE_CODE}/nginx/api/ /opt/app-root/api/
+COPY nginx/serverconf/ /opt/app-root/etc/nginx.default.d/
+COPY nginx/httpconf/ /opt/app-root/etc/nginx.d/
+COPY nginx/api/ /opt/app-root/api/
 
 # Launcher
 WORKDIR /opt/app-root/bin
 
-COPY ${RSTUDIO_SOURCE_CODE}/utils utils/
-COPY ${RSTUDIO_SOURCE_CODE}/run-rstudio.sh ${RSTUDIO_SOURCE_CODE}/setup_rstudio.py ${RSTUDIO_SOURCE_CODE}/rsession.sh ${RSTUDIO_SOURCE_CODE}/run-nginx.sh ./
+COPY utils utils/
+COPY run-rstudio.sh setup_rstudio.py rsession.sh run-nginx.sh ./
 
 USER 1001
 
-COPY ${RSTUDIO_SOURCE_CODE}/Pipfile.lock ./
+COPY Pipfile.lock ./
 
 RUN echo "Installing softwares and packages" && \
     micropipenv install && \
